fix misaligned bottom-positioned buttons

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -122,7 +122,7 @@ textarea {
 
 .bottom {
 	position: absolute !important;
-	bottom: 0.5rem;
+	bottom: 0.7rem;
 	left: 0;
 	width: 100%;
 }
